fix for making the z-index too high on the overlay and drawing above the topbar

--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -161,7 +161,7 @@
     display: block;
     background-image: image-url("#{$image-url}");
     position: relative;
-    z-index: 9000;
+    z-index: 10;
 
     .overlay {
       @extend .portrait;
